--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
     "react": "^19.0.0",
+    "react-app": "^1.1.2",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
@@ -16,6 +17,7 @@
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:5002",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
