--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "rechart": "^0.0.1",
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4",
-    "zod": "^4.1.9"
+    "zod": "^4.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
