--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
-    "react": "^19.0.0",
-    "react-app": "^1.1.2",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "rechart": "^0.0.1",
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4",
