--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "rechart": "^0.0.1",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "web-vitals": "^2.1.4",
     "zod": "^4.1.9"
   },
