--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,10 +12,12 @@
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.562.0",
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "rechart": "^0.0.1",
